tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part1.flx:104:14
    |
104 | let points = [split_ints(trim(line), ",") | line <- lines, trim(line) != ""]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_part1.flx:106:12
    |
106 | let idxs = range(0, n)
    |            ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_part1.flx:110:1
    |
110 | fold(idxs, [||], /(acc, i) -> {
    | ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_part1.flx:118:16
    |
118 | let parents0 = range(0, n)
    |                ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part1.flx:119:14
    |
119 | let sizes0 = map(range(0, n), /_ -> 1)
    |              ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_part1.flx:121:14
    |
121 | let state1 = fold(top_keys, state0, /(st, k) -> union_key(st, k))
    |              ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part1.flx:125:13
    |
125 | let comps = [int_at(sizes1, i) | i <- range(0, len(parents1)), int_at(parents1, i) == i]
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `sort`.

  examples/aoc/2025/aoc_day8_part1.flx:126:11
    |
126 | let top = sort(comps, "desc")
    |           ^^^^

Hint:
  Define it first: let sort = ...;

Help:
  Did you mean one of: `sorted_keys`, `root`?

Found 8 errors.
== stdout ==
<not executed>
